// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package ink.proto;

option javascript_package = "ink.proto";
option java_package = "com.google.ink.proto";
option java_outer_classname = "BrixProto";

// A BrixElementBundle is an ElementBundle massaged into a form that's easily
// and (relatively) efficiently transferred into the Ink Brix data model.
message BrixElementBundle {
  optional string uuid = 1;
  // A base64-encoded, wire-format-serialized Element proto.
  optional string encoded_element = 2;
  // A base64-encoded, wire-format-serialized AffineTransform proto.
  optional string encoded_transform = 3;

  // next id: 4
}

message BrixElementMutation {
  repeated string uuid = 1;

  // A base64-encoded, wire-format-serialized AffineTransform proto.
  repeated string encoded_transform = 2;
}
